--- a/probing/extensions/python/Cargo.toml
+++ b/probing/extensions/python/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = { workspace = true }
 tokio = { workspace = true }
 
 py-spy= { version = "0.4.0"}
+chrono = { version = "0.4", features = ["serde"] }
 include_dir = "=0.7.4"
 backtrace = { version = "0.3", features = ["cpp_demangle", "std"] }
 cpp_demangle = "0.3"
